# quick-protobuf

./: .gitignore  .travis.yml  Cargo.toml  Changelog.md  README.md  appveyor.yml  generate_modules.sh  run_test.sh
.github/workflows/: ci.yml
benches/: benches.rs  perftest.rs
benches/perftest_data/: mod.rs  perftest_data.proto
benches/rust-protobuf/: .gitignore  Cargo.toml  README.md  perftest.rs  perftest_data.rs  perftest_data_prost.proto  perftest_data_quick.proto  perftest_data_quick.rs
benches/unit_bench/: Cargo.toml  generate_bench.sh  generate_test.sh  lib.rs
codegen/: Cargo.toml  README.md  run_test.sh  test.sh
codegen/src/: errors.rs  keywords.rs  lib.rs  main.rs  parser.rs  types.rs
examples/: codegen_example.rs
examples/codegen/: data_types.proto  data_types.rs  data_types_import.proto  data_types_import.rs  data_types_unit.rs  generate_module.sh  mod.rs
examples/codegen/a/: b.rs
pb-rs/: Cargo.toml  README.md  test.sh
pb-rs/src/: errors.rs  keywords.rs  lib.rs  main.rs  parser.rs  scc.rs  types.rs
perftest/: .gitignore  Cargo.toml  README.md  build.rs
perftest/src/: main.rs  perftest_data.proto  perftest_data.rs  perftest_data_prost.rs  perftest_data_quick.rs
protorust_codegen/: Cargo.toml  README.md
protorust_codegen/src/: main.rs  parser.rs  types.rs
quick-protobuf/: Cargo.toml  README.md  appveyor.yml
quick-protobuf/benches/: perftest.rs
quick-protobuf/benches/perftest_data/: generate_mod.sh  perftest_data.rs
quick-protobuf/benches/rust-protobuf/: Cargo.toml  README.md  perftest_data_prost.rs  perftest_data_quick.rs
quick-protobuf/benches/rust-protobuf/src/: main.rs  perftest_data.proto
quick-protobuf/examples/: codegen_example.rs  pb_rs_example.rs  pb_rs_example_nostd.rs  pb_rs_example_v3.rs  pb_rs_example_v3_owned.rs  pb_rs_example_v3_rental.rs
quick-protobuf/examples/pb_rs/: data_types.rs  data_types_unit.rs
quick-protobuf/examples/pb_rs/a/: b.rs
quick-protobuf/examples/pb_rs_nostd/protos/: no_std.rs
quick-protobuf/examples/pb_rs_v3/: data_types.proto  data_types.rs  data_types_unit.rs  mod.rs
quick-protobuf/examples/pb_rs_v3/a/: b.rs  bv3.rs
quick-protobuf/examples/pb_rs_v3/owned/: data_types.rs  data_types_unit.rs
quick-protobuf/examples/pb_rs_v3/owned/a/: b.rs
quick-protobuf/examples/pb_rs_v3/rental/: data_types.rs
quick-protobuf/fuzz/: Cargo.toml
quick-protobuf/fuzz/fuzz_targets/: foomessage.rs
quick-protobuf/no-std-example/: Cargo.toml  Readme.md
quick-protobuf/no-std-example/src/: lib.rs  no_std.proto
quick-protobuf/no-std-example/src/protos/: no_std.rs
quick-protobuf/src/: errors.rs  lib.rs  message.rs  reader.rs  sizeofs.rs  writer.rs
quick-protobuf/tests/: write_read.rs
quick-protobuf/tests/issue69/: person.rs
quick-protobuf/tests/packed_primitives/: mod.rs  person.rs
quick-protobuf/tests/rust_protobuf/: generate.sh  test_utils.rs
quick-protobuf/tests/rust_protobuf/common/: mod.rs  test_oneof.rs
quick-protobuf/tests/rust_protobuf/common/mesos/: mod.rs  v1.rs
quick-protobuf/tests/rust_protobuf/v2/: basic.rs  issue118-2.proto  issue118.rs  issue118_2.rs  mod.rs  nonunique_1.rs  nonunique_2.rs  special.rs  struct_pb.rs  test_basic.rs  test_default_values.rs  test_default_values_dont_use_cow_pb.proto  test_default_values_pb.proto  test_default_values_test.rs  test_deprecated_lifetime.rs  test_deprecated_lifetime_must_compile_error.stderr  test_deprecated_lifetime_pb.proto  test_enum_alias_pb.proto  test_enum_values_pb.rs  test_ident_pb.rs  test_import_nested_imported_pb.rs  test_import_nested_pb.rs  test_import_nonunique_pb.rs  test_import_root_imported_pb.rs  test_import_root_pb.rs  test_lite_runtime.rs  test_nonunique_enum_pb.rs  test_oneof_pb.rs  test_owned_must_compile_error.stderr  test_required.rs  test_root_pb.rs  test_sanitize_file_name_pb.rs  test_sync.rs  test_text_format.rs  test_text_format_pb.rs  vector_tile.rs
quick-protobuf/tests/rust_protobuf/v2/foo/: bar.rs  baz.rs
quick-protobuf/tests/rust_protobuf/v3/: basic.rs  mod.rs  test_basic.rs  test_basic_pb.proto  test_comments.proto  test_deprecated_lifetime.rs  test_deprecated_lifetime_must_compile_error.stderr  test_enum_alias_pb.proto  test_ident_pb.rs  test_map.rs  test_map_pb.rs  test_oneof_pb.rs  test_owned_must_compile_error.stderr  test_zeros_are_not_written.rs
src/: errors.rs  lib.rs  message.rs  packed.rs  reader.rs  sizeofs.rs  types.rs  writer.rs
tests/: rust_proto.rs  write_read.rs
tests/issue69/: mod.rs  person.proto  person.rs
tests/rust_protobuf/: generate.sh  mod.rs  test_utils.rs
tests/rust_protobuf/common/: mod.rs
tests/rust_protobuf/v2/: basic.rs  mod.rs  nonunique_1.rs  nonunique_2.rs  special.rs  struct.rs  struct_pb.rs  test-sanitize-file-name_pb.rs  test_basic.rs  test_basic_pb.rs  test_default_values.rs  test_default_values_pb.rs  test_default_values_test.rs  test_enum_values_pb.rs  test_expose_oneof_pb.rs  test_group_pb.rs  test_ident_pb.rs  test_import_nested_imported_pb.rs  test_import_nested_pb.rs  test_import_nonunique_1_pb.rs  test_import_nonunique_2_pb.rs  test_import_nonunique_pb.rs  test_import_pkg_nested_imported_pb.rs  test_import_pkg_nested_pb.rs  test_import_root_imported_pb.rs  test_import_root_pb.rs  test_lite_runtime.rs  test_lite_runtime_pb.rs  test_lite_runtime_test.rs  test_nonunique_enum_pb.rs  test_oneof_pb.rs  test_required.rs  test_required_pb.rs  test_required_test.rs  test_root_pb.rs  test_sanitize_file_name_pb.rs  test_special_characters_file_name__pb.rs  test_sync.rs  test_text_format.rs  test_text_format_pb.rs  (+1 more)
tests/rust_protobuf/v2/foo/: bar.rs  baz.rs  mod.rs
tests/rust_protobuf/v3/: basic.rs  mod.rs  test_basic.rs  test_basic_pb.rs  test_enum_alias_pb.rs  test_ident_pb.rs  test_map.rs  test_map_pb.rs  test_oneof_pb.rs  test_zeros_are_not_written.rs
