[package]
name = "pb-rs"
version = "0.7.0"
description = "A converter from proto files into quick-protobuf compatible rust module"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
keywords = ["protobuf", "parser", "quick-protobuf"]
license = "MIT"
readme = "README.md" 
repository = "https://github.com/tafia/quick-protobuf"

[dependencies]
nom = "4.2.3"
clap ="2.33.0"
failure = "0.1.5"
failure_derive = "0.1.5"
log = "0.4.6"
env_logger = "0.6.1"

[dev-dependencies]
walkdir = "2.2.7"

[features]
default = []
generateImplFromForEnums = []
