[package]
name = "pb-rs"
version = "0.8.3"
description = "A converter from proto files into quick-protobuf compatible rust module"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
keywords = ["protobuf", "parser", "quick-protobuf"]
license = "MIT"
readme = "README.md" 
repository = "https://github.com/tafia/quick-protobuf"
edition = "2018"

[dependencies]
nom = "3.2.1"
clap = "2.33.1"
log = "0.4.4"
env_logger = "0.7.1"

[dev-dependencies]
walkdir = "2.3.1"

[features]
default = []
generateImplFromForEnums = []
