[package]
name = "pb-rs"
version = "0.9.1"
description = "A converter from proto files into quick-protobuf compatible Rust module"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
keywords = ["protobuf", "parser", "quick-protobuf"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tafia/quick-protobuf"
edition = "2018"

[dependencies]
nom = "3.2.1"
log = "0.4.4"
clap = { version = "2.33.1", optional = true }
env_logger = { version = "0.7.1", optional = true }

[dev-dependencies]
walkdir = "2.3.1"

[features]
default = ["std"]
std = ["clap", "env_logger"]
generateImplFromForEnums = []
