[project]
name = "perftest"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>",
           "Johann Tuffe <tafia973@gmail.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
protobuf = "2.25.2"
quick-protobuf = { path = "../quick-protobuf" }
rand = "0.8"
rand_xoshiro = "0.6"
prost = "0.9.0"
bytes = "1"

[build-dependencies]
protobuf-codegen-pure = "2.25.2"
pb-rs = { path = "../pb-rs" }
prost-build = "0.9.0"
[features]

[profile.release]
lto = true
