[project]
name = "perftest"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>",
           "Johann Tuffe <tafia973@gmail.com>"]

[dependencies]
protobuf = "1.4"
quick-protobuf = { path = "../../" }
time = { git = "https://github.com/rust-lang/time" }
rand = "0.3.15"

[[bin]]

name = "rust-protobuf-perftest"
path = "perftest.rs"
test = false
