[project]
name = "perftest"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>",
           "Johann Tuffe <tafia973@gmail.com>"]
build = "build.rs"

[dependencies]
protobuf = "2.0.4"
quick-protobuf = { path = "../../" }
time = "0.1.40"
rand = "0.5.5"
prost = "0.4.0"
prost-derive = "0.4.0"
bytes = "0.4.9"

[build-dependencies]
protobuf-codegen-pure = "2.0.4"
pb-rs = { path = "../../../pb-rs" }
prost-build = "0.4.0"
